# mr-post

./: .gitignore  .sesskey  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.agents  Dockerfile.frontend  Dockerfile.storage
scripts/: dev.py
services/agents/: __init__.py  base_agent.py  main.py  reviewer_agent.py  writer_agent.py
services/frontend/: __init__.py  main.py
services/storage/: __init__.py  main.py  models.py
src/mr_post/: __init__.py
